--- a/page1_belugawhale.html
+++ b/page1_belugawhale.html
@@ -29,7 +29,7 @@
     <main>
       <!-- heading and main image -->
       <div id="fullContent">
-        <div class="section1">
+        <section class="section1">
           <img
             id="mainimage"
             src="../images/beluga/beluga.jpg"
@@ -39,9 +39,9 @@
             <h1>BELUGA WHALE</h1>
             <p>Beluga, White whale, Sea Canary, Melonhead</p>
           </div>
-        </div>
+        </section>
         <!-- content begins -->
-        <div class="intro">
+        <section class="intro">
           <div id="intropara">
             <p>
               The beluga is also called the white whale because of its milky
@@ -71,8 +71,8 @@
               <li class="value">3-5.5M</li>
             </ul>
           </div>
-        </div>
-        <div class="distribution">
+        </section>
+        <section class="distribution">
           <div class="distpara">
             <h2>Distribution</h2>
             <p>
@@ -93,8 +93,8 @@
             src="../images/beluga/beluga-distribution.png"
             alt="beluga whale distribution"
           />
-        </div>
-        <div class="habitat">
+        </section>
+        <section class="habitat">
           <div class="habitatpara">
             <h2>Habitat and Lifestyle</h2>
             <p>
@@ -119,9 +119,8 @@
             src="../images/beluga/beluga-habitat.jpg"
             alt="beluga whale habitat"
           />
-        </div>
-
-        <div class="population">
+        </section>
+        <section class="population">
           <div class="poppara">
             <h2>Population</h2>
             <h3>Population threats</h3>
@@ -145,8 +144,8 @@
             src="../images/beluga/beluga-population.jpg"
             alt="beluga whales swimming "
           />
-        </div>
-        <div class="diet">
+        </section>
+        <section class="diet">
           <div class="dietpara">
             <h2>Diet and Nutrition</h2>
             <p>
@@ -162,9 +161,8 @@
             src="../images/beluga/beluga-diet.jpg"
             alt="beluga whale eating fish"
           />
-        </div>
-
-        <div class="mating">
+        </section>
+        <section class="mating">
           <div class="matingpara">
             <h2>Mating Habits</h2>
             <p>
@@ -189,8 +187,8 @@
             src="../images/beluga/beluga-mating.jpg"
             alt="beluga whale mating"
           />
-        </div>
-        <div class="facts">
+        </section>
+        <section class="facts">
           <div>
             <h2>Fun Facts For Kids</h2>
             <ul>
@@ -223,14 +221,14 @@
           </div>
           <div id="slideshow_images">
             <img
-              src="images/1L.jpg"
+              src="Images/beluga/slideshow/p1.jpg"
               id="slideshow"
               width="430"
               height="300"
               alt="slideshow of beluga whale images"
             />
           </div>
-        </div>
+        </section>
       </div>
     </main>
     <!-- content ends -->
