--- a/page2_brownbear.html
+++ b/page2_brownbear.html
@@ -29,213 +29,230 @@
     <!-- heading and main image -->
     <main>
       <div id="fullContent">
-      <div class="section1">
-        <img
-          id="mainimage"
-          src="../images/brownbear/brownbear.png"
-          alt="Brown Bear"
-        />
-        <h1>
-          BROWN <br />
-          BEAR
-        </h1>
+        <section class="section1">
+          <img
+            id="mainimage"
+            src="../images/brownbear/brownbear.png"
+            alt="Brown Bear"
+          />
+          <h1>
+            BROWN <br />
+            BEAR
+          </h1>
+        </section>
+        <!-- content begins -->
+        <section class="intro">
+          <div id="intropara">
+            <p>
+              The Brown bear is a large mammal with a notable hump of muscles
+              over its shoulders. This animal is the second largest species of
+              bear. The legs of Brown bear are strong with huge paws. Their
+              claws are rather long on their front feet, allowing them to dig
+              their dens as well as dig for food. The ears are relatively small
+              and the face is concave while the head is large with powerful
+              jaws. Brown bears have ability of standing and walking on their
+              hind legs; they do so in order to determine location of a food
+              source or to identify a threat. These animals have thick coat,
+              varying in color from black to brown and blonde. The guard hair of
+              these animals is longer, sometimes having white tip, which gives
+              them grizzled appearance.
+            </p>
+          </div>
+          <div class="box">
+            <ul>
+              <li class="heading">POPULATION SIZE</li>
+              <li class="value">200,000</li>
+              <li class="heading">LIFE SPAN</li>
+              <li class="value">20-50 YRS</li>
+              <li class="heading">TOP SPEED</li>
+              <li class="value">56 KM/H</li>
+              <li class="heading">WEIGHT</li>
+              <li class="value">100-635 KG</li>
+              <li class="heading">HEIGHT</li>
+              <li class="value">70-153 CM</li>
+              <li class="heading">LENGTH</li>
+              <li class="value">1.4-2.8 M</li>
+            </ul>
+          </div>
+        </section>
+        <section class="distribution">
+          <div class="distpara">
+            <h2>Distribution</h2>
+            <p>
+              These bears are found in very small numbers from North America to
+              Western Europe, Palestine, Eastern Siberia and Himalayan region.
+              The habitat of the Brown bear is usually riparian areas. These
+              bears live along rivers and streams in prairies, alpine meadows,
+              woodlands and forests.
+            </p>
+          </div>
+          <img
+            id="distributionimage"
+            src="../images/brownbear/bear-distribution.png"
+            alt="brown bear distribution"
+          />
+        </section>
+        <section class="habitat">
+          <div class="habitatpara">
+            <h2>Habitat and Lifestyle</h2>
+            <p>
+              The brown bear is a territorial animal, leading solitary life. The
+              bears usually forage in mornings and evenings, resting in cover by
+              day; however, they are active at any time of the day. They spend
+              the winter months in dens, entering a dormant state. Brown bears
+              are not full hibernators, so can be woken at any time. Their dens
+              are usually caves, hollow logs or crevices. From time to time,
+              Brown bears congregate into large groups to feed. The groups have
+              social hierarchy system, based on age and size. With coming of the
+              autumn, some individuals travel hundreds of kilometers in search
+              of a suitable source of food.
+            </p>
+          </div>
+          <img
+            id="habitatimage"
+            src="../images/brownbear/bear-habitat.jpg"
+            alt="brown bear habitat"
+          />
+        </section>
+        <section class="population">
+          <div class="poppara">
+            <h2>Population</h2>
+            <h3>Population threats</h3>
+            <p>
+              The major threats include habitat loss and fragmentation through
+              the extension of human habitat: highways and settlements together
+              with development of agriculture bring to decrease of their
+              habitat. In addition, due to hunting on sheep and cattle, these
+              animals have been persecuted by humans as predators of domestic
+              livestock. Also, these bears are occasionally hunted for sport. On
+              the other hand, some isolated populations of Brown bear are
+              threatened with adverse genetic affects. And finally, these
+              animals are poached for their paws and gall bladders that have
+              high commercial value.
+            </p>
+            <h3>Population number</h3>
+            <p>
+              The population of the Brown bear is currently stable and not
+              endangered. In the IUCN Red List, the species is classified as
+              Least Concern (LC). The global population is more than 200,000
+              individuals with about 100,000 of them living in Russia and 14,000
+              in the rest of Europe. Other countries with a large number of
+              population include US (33,000) and Canada (25,000).
+            </p>
+            <h3>Ecological Niche</h3>
+            <p>
+              On one hand, being predators, these animals control prey species.
+              On the other hand, they play important role in the ecosystem,
+              dispersing seeds and thus sustaining the environment.
+            </p>
+          </div>
+          <img
+            id="populationimage"
+            src="../images/brownbear/bear-population.jpg"
+            alt="brown bear population"
+          />
+        </section>
+        <section class="diet">
+          <div class="dietpara">
+            <h2>Diet and Nutrition</h2>
+            <p>
+              Brown bears are omnivores. What they eat largely depends on what
+              kind of food is available at a particular season. Thus, in the
+              spring they feed on grass and shoots, in the summer they eat
+              berries and apples while in the autumn they consume nuts and
+              plums. In addition, they eat reptiles, insects, roots and honey.
+              Brown bears, living in the Canadian Rockies, feed upon mammals
+              such as moose or elk whereas those in Alaska eat salmon in the
+              summer.
+            </p>
+          </div>
+          <img
+            id="dietimage"
+            src="../images/brownbear/bear-diet.jpg"
+            alt="brown bear eating grass"
+          />
+        </section>
+        <section class="mating">
+          <div class="matingpara">
+            <h2>Mating Habits</h2>
+            <p>
+              Brown bears are serially monogamous, living with the same mate
+              from several days to several weeks. During this time, the male
+              competes with other males in the area, protecting the female from
+              them. During the breeding season, which lasts from May to July, a
+              female can mate with multiple males – behavior, that can be
+              characterized as polygynandry. The period of gestation lasts 8
+              weeks, yielding 1-4 cubs. The cubs are ready to start foraging
+              with their mother. The female breastfeed them until spring. For
+              2-4 years, the mother teaches the cub's survival techniques: the
+              babies learn where to den, how to hunt, and how to defend
+              themselves. Males do not mate until they are able to compete with
+              other males in the area for mating rights while females reach
+              sexual maturity at 5-7 years old.
+            </p>
+          </div>
+          <img
+            id="matingimage"
+            src="../images/brownbear/bear-mating.jpg"
+            alt="brown bear with two cubs"
+          />
+        </section>
+        <section class="facts">
+          <div>
+            <h2>Fun Facts</h2>
+            <ul>
+              <li>
+                Brown bears use their claws to dig comfortable caves, where they
+                spend the winter. As they enter a dormant state, their
+                heartbeats drop to 10 beats per minute.
+              </li>
+              <li>
+                Females of Brown bear give birth during the winter, being
+                asleep. Newborn cubs feed upon maternal milk and warm in fur of
+                their mother until the spring comes, and the female wakes up to
+                see her babies.
+              </li>
+              <li>
+                These animals are highly intelligent: they use tools in their
+                daily life from hunting to playing; they have large brain,
+                compared to their body size; they have good memory and excellent
+                navigation skills.
+              </li>
+              <li>
+                They are able to smell cubs, a mate, predators or food from as
+                far as miles away. In addition, they have excellent eyesight,
+                which helps them identify ripe fruits.
+              </li>
+              <li>The Brown bear is the national animal of Finland.</li>
+              <li>
+                The Brown bear is also a European Protected Species, having
+                protection in the countries of the European Union.
+              </li>
+            </ul>
+          </div>
+          <div id="slideshow_images">
+            <img
+              src="Images/brownbear/slideshow/p1.jpg"
+              id="slideshow"
+              width="430"
+              height="300"
+              alt="slideshow of brown bear images"
+            />
+          </div>
+        </section>
       </div>
-      <!-- content begins -->
-      <div class="intro">
-        <div id="intropara">
-          <p>
-            The Brown bear is a large mammal with a notable hump of muscles over
-            its shoulders. This animal is the second largest species of bear.
-            The legs of Brown bear are strong with huge paws. Their claws are
-            rather long on their front feet, allowing them to dig their dens as
-            well as dig for food. The ears are relatively small and the face is
-            concave while the head is large with powerful jaws. Brown bears have
-            ability of standing and walking on their hind legs; they do so in
-            order to determine location of a food source or to identify a
-            threat. These animals have thick coat, varying in color from black
-            to brown and blonde. The guard hair of these animals is longer,
-            sometimes having white tip, which gives them grizzled appearance.
-          </p>
-        </div>
-        <div class="box">
-          <ul>
-            <li class="heading">POPULATION SIZE</li>
-            <li class="value">200,000</li>
-            <li class="heading">LIFE SPAN</li>
-            <li class="value">20-50 YRS</li>
-            <li class="heading">TOP SPEED</li>
-            <li class="value">56 KM/H</li>
-            <li class="heading">WEIGHT</li>
-            <li class="value">100-635 KG</li>
-            <li class="heading">HEIGHT</li>
-            <li class="value">70-153 CM</li>
-            <li class="heading">LENGTH</li>
-            <li class="value">1.4-2.8 M</li>
-          </ul>
-        </div>
-      </div>
-      <div class="distribution">
-        <div class="distpara">
-          <h2>Distribution</h2>
-          <p>
-            These bears are found in very small numbers from North America to
-            Western Europe, Palestine, Eastern Siberia and Himalayan region. The
-            habitat of the Brown bear is usually riparian areas. These bears
-            live along rivers and streams in prairies, alpine meadows, woodlands
-            and forests.
-          </p>
-        </div>
-        <img
-          id="distributionimage"
-          src="../images/brownbear/bear-distribution.png"
-          alt="brown bear distribution"
-        />
-      </div>
-      <div class="habitat">
-        <div class="habitatpara">
-          <h2>Habitat and Lifestyle</h2>
-          <p>
-            The brown bear is a territorial animal, leading solitary life. The
-            bears usually forage in mornings and evenings, resting in cover by
-            day; however, they are active at any time of the day. They spend the
-            winter months in dens, entering a dormant state. Brown bears are not
-            full hibernators, so can be woken at any time. Their dens are
-            usually caves, hollow logs or crevices. From time to time, Brown
-            bears congregate into large groups to feed. The groups have social
-            hierarchy system, based on age and size. With coming of the autumn,
-            some individuals travel hundreds of kilometers in search of a
-            suitable source of food.
-          </p>
-        </div>
-        <img
-          id="habitatimage"
-          src="../images/brownbear/bear-habitat.jpg"
-          alt="brown bear habitat"
-        />
-      </div>
-      <div class="population">
-        <div class="poppara">
-          <h2>Population</h2>
-          <h3>Population threats</h3>
-          <p>
-            The major threats include habitat loss and fragmentation through the
-            extension of human habitat: highways and settlements together with
-            development of agriculture bring to decrease of their habitat. In
-            addition, due to hunting on sheep and cattle, these animals have
-            been persecuted by humans as predators of domestic livestock. Also,
-            these bears are occasionally hunted for sport. On the other hand,
-            some isolated populations of Brown bear are threatened with adverse
-            genetic affects. And finally, these animals are poached for their
-            paws and gall bladders that have high commercial value.
-          </p>
-          <h3>Population number</h3>
-          <p>
-            The population of the Brown bear is currently stable and not
-            endangered. In the IUCN Red List, the species is classified as Least
-            Concern (LC). The global population is more than 200,000 individuals
-            with about 100,000 of them living in Russia and 14,000 in the rest
-            of Europe. Other countries with a large number of population include
-            US (33,000) and Canada (25,000).
-          </p>
-          <h3>Ecological Niche</h3>
-          <p>
-            On one hand, being predators, these animals control prey species. On
-            the other hand, they play important role in the ecosystem,
-            dispersing seeds and thus sustaining the environment.
-          </p>
-        </div>
-        <img
-          id="populationimage"
-          src="../images/brownbear/bear-population.jpg"
-          alt="brown bear population"
-        />
-      </div>
-      <div class="diet">
-        <div class="dietpara">
-          <h2>Diet and Nutrition</h2>
-          <p>
-            Brown bears are omnivores. What they eat largely depends on what
-            kind of food is available at a particular season. Thus, in the
-            spring they feed on grass and shoots, in the summer they eat berries
-            and apples while in the autumn they consume nuts and plums. In
-            addition, they eat reptiles, insects, roots and honey. Brown bears,
-            living in the Canadian Rockies, feed upon mammals such as moose or
-            elk whereas those in Alaska eat salmon in the summer.
-          </p>
-        </div>
-        <img
-          id="dietimage"
-          src="../images/brownbear/bear-diet.jpg"
-          alt="brown bear eating grass"
-        />
-      </div>
-      <div class="mating">
-        <div class="matingpara">
-          <h2>Mating Habits</h2>
-          <p>
-            Brown bears are serially monogamous, living with the same mate from
-            several days to several weeks. During this time, the male competes
-            with other males in the area, protecting the female from them.
-            During the breeding season, which lasts from May to July, a female
-            can mate with multiple males – behavior, that can be characterized
-            as polygynandry. The period of gestation lasts 8 weeks, yielding 1-4
-            cubs. The cubs are ready to start foraging with their mother. The
-            female breastfeed them until spring. For 2-4 years, the mother
-            teaches the cub's survival techniques: the babies learn where to
-            den, how to hunt, and how to defend themselves. Males do not mate
-            until they are able to compete with other males in the area for
-            mating rights while females reach sexual maturity at 5-7 years old.
-          </p>
-        </div>
-        <img
-          id="matingimage"
-          src="../images/brownbear/bear-mating.jpg"
-          alt="brown bear with two cubs"
-        />
-      </div>
-      <div class="facts">
-        <h2>Fun Facts</h2>
-        <ul>
-          <li>
-            Brown bears use their claws to dig comfortable caves, where they
-            spend the winter. As they enter a dormant state, their heartbeats
-            drop to 10 beats per minute.
-          </li>
-          <li>
-            Females of Brown bear give birth during the winter, being asleep.
-            Newborn cubs feed upon maternal milk and warm in fur of their mother
-            until the spring comes, and the female wakes up to see her babies.
-          </li>
-          <li>
-            These animals are highly intelligent: they use tools in their daily
-            life from hunting to playing; they have large brain, compared to
-            their body size; they have good memory and excellent navigation
-            skills.
-          </li>
-          <li>
-            They are able to smell cubs, a mate, predators or food from as far
-            as miles away. In addition, they have excellent eyesight, which
-            helps them identify ripe fruits.
-          </li>
-          <li>The Brown bear is the national animal of Finland.</li>
-          <li>
-            The Brown bear is also a European Protected Species, having
-            protection in the countries of the European Union.
-          </li>
-        </ul>
-      </div>
-    </div>
     </main>
     <!-- content ends -->
     <!-- footer -->
     <div class="footerclass"></div>
+    <script src="../script/brownbear.js"></script>
+    <script>
+      $(function () {
+        $(".navclass").load("navigation.html");
+      });
+      $(function () {
+        $(".footerclass").load("footer.html");
+      });
+    </script>
   </body>
 </html>
-<script type="text/javascript">
-  $(function () {
-    $(".navclass").load("navigation.html");
-  });
-  $(function () {
-    $(".footerclass").load("footer.html");
-  });
-</script>
