--- a/page1_belugawhale.html
+++ b/page1_belugawhale.html
@@ -234,6 +234,7 @@
     <!-- content ends -->
     <!-- footer -->
     <div class="footerclass"></div>
+    <!-- Java Script -->
     <script src="script/belugawhale.js"></script>
     <script>
       $(function () {
