--- a/navigation.html
+++ b/navigation.html
@@ -20,6 +20,7 @@
       <div class="dropdown-content">
         <a href="Animal Merchandise.html">ANIMAL MERCHANDISE</a>
         <a href="thirdpage.html">VOLUNTEER SERVICE</a>
+        <a href="Animal Quiz.html">ANIMAL QUIZ</a>
       </div>
     </div>
     <a href="donation.html">DONATION</a>
@@ -55,8 +56,8 @@
   </button>
   <div class="dropdown-container">
     <a href="Animal Merchandise.html">MERCHANDISE</a>
+    <a href="Animal Quiz.html">ANIMAL QUIZ</a>
     <a href="thirdpage.html">VOLUNTEER SERVICE</a>
-    <a href="#">Link 3</a>
   </div>
   <a href="donation.html">DONATION</a>
   <button class="dropdown-btn">FAUNA 
