--- a/Animal Merchandise.html
+++ b/Animal Merchandise.html
@@ -362,7 +362,7 @@
     </section>
     <div class="footerclass"></div>
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="/script/addtocart"></script>
+    <script src="/script/addtocart.js"></script>
   </body>
 </html>
 
