beaver image change

--- a/beaver.html
+++ b/beaver.html
@@ -15,7 +15,7 @@
             <h1>BEAVER</h1>
         </header>
         <div class="item_intro" id="intro">
-            <img id="intro_img" src="images/beaver-intro.jpg" alt="Beaver on a log in river">
+            <img id="intro_img" src="Images/beaver-intro.jpg" alt="Beaver on a log in river">
             <figure id="intro_fig">
                 <table>
                     <thead>
@@ -50,7 +50,7 @@
             </p>
         </div>
         <div class="item_distribution" id="distribution">
-            <img id="dis_img" src="images/beaver_map.png" atl="Distribution map of Beavers in Canada">
+            <img id="dis_img" src="Images/beaver_map.png" atl="Distribution map of Beavers in Canada">
             <h2 id="dis_h2">DISTRIBUTION IN CANADA</h2>
             <h3 id="dis_h3">Geography</h3>
             <table id="dis_table">
@@ -79,7 +79,7 @@
         </div>
         <div class="item_lifestyle" id="lifestyle">
             <h2 id="life_h2">LIFESTYLE</h2>
-            <img id="life_img" src="images/beaver_shot.jpg" alt="Beaver jumping into water">
+            <img id="life_img" src="Images/beaver_shot.jpg" alt="Beaver jumping into water">
             <p id="life_p">
                 American beavers are highly sociable animals. They make up colonies - family groups of about 
                 8 individuals in each one - and live within a hierarchy. Beavers are very territorial, 
@@ -96,7 +96,7 @@
         </div>
         <div class="item_diet" id="diet">
             <h2 id="diet_h2">DIET & NUTRITION</h2>
-            <img id="diet_img" src="images/beaver_life.jpg" alt="Beaver eating plant in water">
+            <img id="diet_img" src="Images/beaver_life.jpg" alt="Beaver eating plant in water">
             <p id="diet_p">
                 American beavers are herbivores and lignivores; they feed on the bark of trees and cambium 
                 - the inner layer, which is under the bark. The favorite trees include willows, aspen trees, 
@@ -106,7 +106,7 @@
         </div>
         <div class="item_population" id="population">
             <h2 id="pop_h2">POPULATION</h2>
-            <img id="pop_img" src="images/beaver_pop.jpg" alt="Beaver eating stick near rocks">
+            <img id="pop_img" src="Images/beaver_pop.jpg" alt="Beaver eating stick near rocks">
             <section id="pop_section">
                 <h3>Population threats</h3>
                 <p>
