beaver image change3

--- a/beaver.html
+++ b/beaver.html
@@ -15,7 +15,7 @@
             <h1>BEAVER</h1>
         </header>
         <div class="item_intro" id="intro">
-            <img id="intro_img" src="../Images/beaver-intro.jpg" alt="Beaver on a log in river">
+            <img id="intro_img" src="Images/beaver-intro.jpg" alt="Beaver on a log in river">
             <figure id="intro_fig">
                 <table>
                     <thead>
