images file fixes

--- a/bison.html
+++ b/bison.html
@@ -15,7 +15,7 @@
             <h1>BISON</h1>
         </header>
         <div class="item_intro" id="intro">
-            <img id="intro_img" src="images/bison-intro.jpg" alt="Solo Bison in Field">
+            <img id="intro_img" src="Images/bison-intro.jpg" alt="Solo Bison in Field">
             <figure id="intro_fig">
                 <table>
                     <thead>
@@ -50,7 +50,7 @@
             </p>
         </div>
         <div class="item_distribution" id="distribution">
-            <img id="dis_img" src="images/bison_map.png" atl="Distribution map of Bisons in Canada">
+            <img id="dis_img" src="Images/bison_map.png" atl="Distribution map of Bisons in Canada">
             <h2 id="dis_h2">DISTRIBUTION IN CANADA</h2>
             <h3 id="dis_h3">Geography</h3>
             <table id="dis_table">
@@ -80,7 +80,7 @@
         </div>
         <div class="item_lifestyle" id="lifestyle">
             <h2 id="life_h2">LIFESTYLE</h2>
-            <img id="life_img" src="images/bison_life.jpg" alt="Bison herd in field beside mountain">
+            <img id="life_img" src="Images/bison_life.jpg" alt="Bison herd in field beside mountain">
             <p id="life_p">
                 American bison is diurnal, being active all day long. They are usually relatively 
                 passive during the day, becoming particularly active at dusk and dawn. They spend 
@@ -95,7 +95,7 @@
         </div>
         <div class="item_diet" id="diet">
             <h2 id="diet_h2">DIET & NUTRITION</h2>
-            <img id="diet_img" src="images/bison_eating.jpg" alt="Bison eating grass in field">
+            <img id="diet_img" src="Images/bison_eating.jpg" alt="Bison eating grass in field">
             <p id="diet_p">
                 Bison are herbivores (graminivores) and, more specifically, grazers, chewing grass 
                 all year round. However, in absence of grass, they eat other greenery found in the 
@@ -105,7 +105,7 @@
         </div>
         <div class="item_population" id="population">
             <h2 id="pop_h2">POPULATION</h2>
-            <img id="pop_img" src="images/bison1.jpg" alt="Close shot of bisons face">
+            <img id="pop_img" src="Images/bison1.jpg" alt="Close shot of bisons face">
             <section id="pop_section">
                 <h3>Population threats</h3>
                 <p>
