--- a/polarbear.html
+++ b/polarbear.html
@@ -15,7 +15,7 @@
             <h1>POLAR BEAR</h1>
         </header>
         <div class="item_intro" id="intro">
-            <img id="intro_img" src="images/polarbear.jpg" alt="Polar Bear">
+            <img id="intro_img" src="Images/polarbear.jpg" alt="Polar Bear">
             <figure id="intro_fig">
                 <table>
                     <thead>
@@ -50,7 +50,7 @@
             </p>
         </div>
         <div class="item_distribution" id="distribution">
-            <img id="dis_img" src="images/bear_map.gif" atl="Distribution of Polar Bears in Canada">
+            <img id="dis_img" src="Images/bear_map.gif" atl="Distribution of Polar Bears in Canada">
             <h2 id="dis_h2">DISTRIBUTION IN CANADA</h2>
             <h3 id="dis_h3">Geography</h3>
             <table id="dis_table">
@@ -85,7 +85,7 @@
         </div>
         <div class="item_lifestyle" id="lifestyle">
             <h2 id="life_h2">LIFESTYLE</h2>
-            <img id="life_img" src="images/bear_fight.jpg" alt="Polar Bears Fighting">
+            <img id="life_img" src="Images/bear_fight.jpg" alt="Polar Bears Fighting">
             <p id="life_p">
                 Polar bears live a solitary life. They may come into competition with each other when there is the chance to scavenge when a seal is killed. 
                 In such cases, the smaller bear usually runs away. Polar bears can dive underwater to catch their prey, keeping their eyes open while holding
@@ -99,7 +99,7 @@
         </div>
         <div class="item_diet" id="diet">
             <h2 id="diet_h2">DIET & NUTRITION</h2>
-            <img id="diet_img" src="images/walrus.jpg" alt="Walrus's Laying">
+            <img id="diet_img" src="Images/walrus.jpg" alt="Walrus's Laying">
             <p id="diet_p">
                 Most of what Polar bears eat is the blubber and skids of Ringed seals. They often leave the rest of the carcass, which becomes
                 an important food source for other animals. They also eat birds, fish, berries, reindeer and sometimes walrus. Carcasses of 
@@ -109,7 +109,7 @@
         </div>
         <div class="item_population" id="population">
             <h2 id="pop_h2">POPULATION</h2>
-            <img id="pop_img" src="images/wave.jpg" alt="Polar Bear Waving">
+            <img id="pop_img" src="Images/wave.jpg" alt="Polar Bear Waving">
             <section id="pop_section">
                 <h3>Population threats</h3>
                 <p>
