--- a/aboutus.html
+++ b/aboutus.html
@@ -36,23 +36,23 @@
             <div class="image-section">
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 5</div>
-                    <img src="images/bison-intro.jpg">
+                    <img src="Images/bison-intro.jpg">
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 5</div>
-                    <img src="images/bear_fight.jpg">
+                    <img src="Images/bear_fight.jpg">
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 5</div>
-                    <img src="images/KillerWhale2.jpg">
+                    <img src="Images/KillerWhale2.jpg">
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">4 / 5</div>
-                    <img src="images/beaver-intro.jpg">
+                    <img src="Images/beaver-intro.jpg">
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">5 / 5</div>
-                    <img src="images/moose/moose.jpg">
+                    <img src="Images/moose/moose.jpg">
                 </div>
                 <br>
                 <div class="dots-section" style="text-align:center">
